WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192639
REGRESSION (
r230064
): Focus rings on webpages are fainter than in native UI
https://bugs.webkit.org/show_bug.cgi?id=192639
Summary
REGRESSION (r230064): Focus rings on webpages are fainter than in native UI
Timothy Hatcher
Reported
2018-12-12 14:32:25 PST
Focus ring color is expected to be opaque, since opacity used a paint time. We we getting this by accident before when the old RenderThemeMac::systemColor() used convertNSColorToColor(), which ignored alpha on NSColor.
Attachments
Patch
(13.21 KB, patch)
2018-12-13 10:59 PST
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Timothy Hatcher
Comment 1
2018-12-12 14:32:36 PST
<
rdar://problem/42669297
>
Radar WebKit Bug Importer
Comment 2
2018-12-12 14:33:34 PST
<
rdar://problem/46675739
>
Timothy Hatcher
Comment 3
2018-12-12 14:38:03 PST
<
rdar://problem/42669297
>
Timothy Hatcher
Comment 4
2018-12-13 10:59:41 PST
Created
attachment 357239
[details]
Patch
WebKit Commit Bot
Comment 5
2018-12-13 11:56:07 PST
The commit-queue encountered the following flaky tests while processing
attachment 357239
[details]
: imported/w3c/web-platform-tests/FileAPI/idlharness.worker.html
bug 192673
The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 6
2018-12-13 11:56:52 PST
Comment on
attachment 357239
[details]
Patch Clearing flags on attachment: 357239 Committed
r239173
: <
https://trac.webkit.org/changeset/239173
>
WebKit Commit Bot
Comment 7
2018-12-13 11:56:53 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug